--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>ZhuyunMa</h1>
-  <img src="assets/image.jpg" />
+  <img src="assets/ZhuyunMA.jpg" />
 
   <script src="bundle.js" type="text/javascript"></script>
 </body>
