update css and html

--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,32 @@
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MP 0</title>
+  <title>MP 0 - ZhuyunMA</title>
 </head>
 
 <body>
-  <h1>ZhuyunMa</h1>
-  <img src="assets/ZhuyunMA.jpg" />
+<div class="card">
+    <img src="assets/ZhuyunMA.jpg" alt="Zhuyun Ma" class="profile-pic" />
 
-  <script src="bundle.js" type="text/javascript"></script>
+    <h1>Zhuyun Ma</h1>
+    <p class="email">zhuyunma@illinois.edu</p>
+
+    <p class="link">
+      <a href="https://github.com/ZhuyunMa" target="_blank">GitHub</a>
+    </p>
+
+    <p>
+      Graduate student in the Professional Science Master’s (PSM) program in Geographic Information Science at 
+      the University of Illinois Urbana-Champaign. I am interested in GIS, remote sensing, 
+      and spatial data analysis, with applications in environmental protection, water resources, 
+      and urban studies.
+    </p>
+
+    <p>
+      I have interned at the Illinois State Water Survey, where I worked on hydrological modeling 
+      and DEM processing. Previously, I studied Environmental Science and now focus on combining 
+      geospatial technology with sustainability research.
+    </p>
+  </div>
 </body>
-
 </html>
