--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MP 0 - ZhuyunMA</title>
-  <link rel="stylesheet" href="css/main.css?v=2">
+  <script src="bundle.js?v=2" type="text/javascript"></script>
 </head>
 
 <body>
