update css and html

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <img src="assets/ZhuyunMA.jpg" alt="Zhuyun Ma" class="profile-pic" />
 
     <h1>Zhuyun Ma</h1>
-    <p class="email">zhuyunma@illinois.edu</p>
+    <p class="email">zhuyunm2@illinois.edu</p>
 
     <p class="link">
       <a href="https://github.com/ZhuyunMa" target="_blank">GitHub</a>
