update css and html

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     </p>
 
     <p>
-      Graduate student in the Professional Science Master’s (PSM) program in Geographic Information Science at 
+      Hi! This is my website! I am a Graduate student in the Professional Science Master’s (PSM) program in Geographic Information Science at 
       the University of Illinois Urbana-Champaign. I am interested in GIS, remote sensing, 
       and spatial data analysis, with applications in environmental protection, water resources, 
       and urban studies.
@@ -33,5 +33,13 @@
       geospatial technology with sustainability research.
     </p>
   </div>
+
+  <div class="buttons">
+        <button onclick="changeBg('red')">Red</button>
+        <button onclick="changeBg('gray')">Gray</button>
+        <button onclick="changeBg('blue')">Blue</button>
+    </div>
+
+    <script src="js/index.js"></script>
 </body>
 </html>
