--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MP 0 - ZhuyunMA</title>
-  <script src="bundle.js?v=2" type="text/javascript"></script>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
@@ -39,5 +39,7 @@
         <button onclick="changeBg('gray')">Gray</button>
         <button onclick="changeBg('blue')">Blue</button>
     </div>
+  
+    <script src="bundle.js?v=3" defer></script>
 </body>
 </html>
